--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
     </div>
   </div>
   <div id="app-box"></div>
-  <div id="videoPop" class="video-pop">
+  <!-- <div id="videoPop" class="video-pop">
     <div id="videoCon" class="video-con"></div>
     <a class="pop-close" href="javascript:showDialog.hide();">×</a>
-  </div>
+  </div> -->
   <!-- built files will be auto injected -->
   <script type="text/javascript" src="//cdnjs.gtimg.com/cdnjs/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="./ossweb-img/js/swiper.min.js"></script>
   <script src="//ossweb-img.qq.com/images/js/title.js"></script>
   <script src="//ossweb-img.qq.com/images/js/PTT/ping_tcss_tgideas_https_min.js"></script>
   <script src="//qzs.qq.com/tencentvideo_v1/js/tvp/tvp.player.js" charset="utf-8"></script>
-  <script src="http://game.gtimg.cn/images/js/milo/milo-min.js"></script>
+  <script src="//game.gtimg.cn/images/js/milo/milo-min.js"></script>
   <script>
   var isIE = function(ver) {
     var b = document.createElement('b')
