--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
         </div>
         <div class="center">
           <div class="logo"><img src="ossweb-img/image/LOGO.png" alt=""></div>
-          <a href="javascript:;">进入官网</a>
+          <a href="http://project.hivan.me/" alt="">进入官网</a>
           <img src="ossweb-img/image/console-boat.png" alt="" class="console-boat">
           <img src="ossweb-img/image/headset.png" alt="" class="headset">
           <img src="ossweb-img/image/riflemen.png" alt="" class="riflemen">
@@ -69,33 +69,59 @@
           </div>
           <div class="mentor">
             <div class="mentor-1">
-              <div class="person"></div>
-              <img src="ossweb-img/image/foto-1.jpg" alt="">
+              <div class="person">
+                <div class="person-inner">
+                  <div>
+                    <div class="name">刘丹</div>
+                    <div class="intor">天行工作室总经理</div>
+                  </div>
+                </div>
+              </div>
+              <img src="ossweb-img/image/walker.jpg" alt="">
             </div>
             <div class="mentor-2">
               <div class="person">
+                <div class="person-inner">
+                  <div>
+                    <div class="name">沈黎</div>
+                    <div class="intor">NEXT研发中心总经理</div>
+                  </div>
+                </div>
               </div>
-              <img src="ossweb-img/image/foto-2.jpg" alt="">
+              <img src="ossweb-img/image/lishen.jpg" alt="">
             </div>
             <div class="mentor-3">
               <div class="person">
                 <div class="person-inner">
-                  <div class="name">李若凡 LAVA</div>
-                  <div class="job">腾讯互娱创意设计中心总监</div>
-                  <div class="intor">
-                    李若凡老师，2005年毕业于西安美术学院，进入腾讯后工作至今，现为腾讯游戏Tgideas团队设计总监。
+                  <div>
+                    <div class="name">夏琳</div>
+                    <div class="intor">腾讯游戏学院院长</div>
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/foto-3.jpg" alt="">
+              <img src="ossweb-img/image/sammi.jpg" alt="">
             </div>
             <div class="mentor-4">
-              <div class="person"></div>
-              <img src="ossweb-img/image/foto-4.jpg" alt="">
+              <div class="person">
+                <div class="person-inner">
+                  <div>
+                    <div class="name">刘子建</div>
+                    <div class="intor">腾讯游戏学院副院长</div>
+                  </div>
+                </div>
+              </div>
+              <img src="ossweb-img/image/jim.jpg" alt="">
             </div>
             <div class="mentor-5">
-              <div class="person"></div>
-              <img src="ossweb-img/image/foto-5.jpg" alt="">
+              <div class="person">
+                <div class="person-inner">
+                  <div>
+                    <div class="name">张晗劲</div>
+                    <div class="intor">魔方工作室群总裁</div>
+                  </div>
+                </div>
+              </div>
+              <img src="ossweb-img/image/hanjin.jpg" alt="">
             </div>
           </div>
         </div>
@@ -124,11 +150,15 @@
               <img src="ossweb-img/image/icon-2.png" alt="">
             </div>
             <div class="process-item item-3">
-              <p>前沿创新实验室 <br> Next <span>（New Experience and Technology）</span> <br> 研发中心支持创意孵化 </p>
+              <p>前沿创新实验室
+                <br> Next <span>（New Experience and Technology）</span>
+                <br> 研发中心支持创意孵化 </p>
               <img src="ossweb-img/image/icon-3.png" alt="">
             </div>
             <div class="process-item item-4">
-              <p>2017全新战略项目 <br> “极光计划” <br> 扶持作品制作上线</p>
+              <p>2017全新战略项目
+                <br> “极光计划”
+                <br> 扶持作品制作上线</p>
               <img src="ossweb-img/image/icon-4.png" alt=""></div>
           </div>
         </div>
@@ -139,6 +169,21 @@
       <div class="swiper-slide slide-5">
         <div class="slide">
           <img src="./ossweb-img/image/slide-icon-dark.png" alt="">
+        </div>
+        <div class="center">
+          <a href="http://project.hivan.me/" alt="">进入官网</a>
+          <div class="info">
+            <p class="title">重磅奖励惊喜多多</p>
+          </div>
+          <div class="center-element">
+            <img class="left element" src="ossweb-img/image/element-left.png" alt="">
+            <img class="element item-1" src="ossweb-img/image/element-1.png" alt="">
+            <img class="element item-2" src="ossweb-img/image/element-2.png" alt="">
+            <img class="element item-3" src="ossweb-img/image/element-3.png" alt="">
+            <img class="element item-4" src="ossweb-img/image/element-4.png" alt="">
+            <img class="element item-5" src="ossweb-img/image/element-5.png" alt="">
+            <img class="right element" src="ossweb-img/image/element-right.png" alt="">
+          </div>
         </div>
         <div class="bg">
           <img src="ossweb-img/image/slide-5-bg.png" alt="">
