--- a/index.htm
+++ b/index.htm
@@ -212,7 +212,7 @@
         var _index = swiper.activeIndex;
         slideAnimationEnd(_index);
       },
-      onSetWrapperTransition: function(swiper) {
+      onSlideChangeStart: function(swiper) {
         var _index = swiper.activeIndex;
         slideAnimationStart(_index);
       },
