--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <!-- built files will be auto injected -->
   <script type="text/javascript" src="//cdnjs.gtimg.com/cdnjs/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="./ossweb-img/js/swiper.min.js"></script>
+  <script type="text/javascript" src="ossweb-img/js/config.js"></script>
   <script src="//ossweb-img.qq.com/images/js/title.js"></script>
   <script src="//ossweb-img.qq.com/images/js/PTT/ping_tcss_tgideas_https_min.js"></script>
   <script src="//qzs.qq.com/tencentvideo_v1/js/tvp/tvp.player.js" charset="utf-8"></script>
