--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
         </div>
         <div class="center">
           <div class="logo"><img src="ossweb-img/image/LOGO.png" alt=""></div>
-          <a href="http://project.hivan.me/" alt="">进入官网</a>
+          <a class="go-index" href="http://project.hivan.me/" alt="">进入官网</a>
           <img src="ossweb-img/image/console-boat.png" alt="" class="console-boat">
           <img src="ossweb-img/image/headset.png" alt="" class="headset">
           <img src="ossweb-img/image/riflemen.png" alt="" class="riflemen">
@@ -171,7 +171,7 @@
           <img src="./ossweb-img/image/slide-icon-dark.png" alt="">
         </div>
         <div class="center">
-          <a href="http://project.hivan.me/" alt="">进入官网</a>
+          <a class="go-index" href="http://project.hivan.me/" alt="">进入官网</a>
           <div class="info">
             <p class="title">重磅奖励惊喜多多</p>
           </div>
@@ -205,22 +205,7 @@
   <script src="//game.gtimg.cn/images/js/milo/milo-min.js"></script>
   <script type="text/javascript">
   $(function() {
-    var mySwiper = $('.swiper-container').swiper({
-      mode: 'vertical',
-      mousewheelControl: true,
-      onSlideChangeEnd: function(swiper) {
-        var _index = swiper.activeIndex;
-        slideAnimationEnd(_index);
-      },
-      onSlideChangeStart: function(swiper) {
-        var _index = swiper.activeIndex;
-        slideAnimationStart(_index);
-      },
-      onSlideReset: function(swiper) {
-        var _index = swiper.activeIndex;
-        slideanimationRestart(_index);
-      }
-    });
+    app.init();
   })
   </script>
   <script>
