--- a/index.htm
+++ b/index.htm
@@ -85,30 +85,35 @@
   <!-- 添加 RSS 订阅 -->
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
   <!-- 添加 favicon icon -->
-  <link rel="stylesheet" href="ossweb-img/css/swiper.min.css">
-  <link rel="stylesheet" type="text/css" href="ossweb-img/css/common.css">
+  <link rel="stylesheet" href="//gameinstitute.qq.com/act/a20170601nextidea/css/swiper.min.css">
+  <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170601nextidea/css/common.css">
+  <style>
+    b.text-font{
+      font-size: .12rem !important;
+      font-weight: normal;
+    }
+  </style>
   <title>标题</title>
 </head>
-
 <body>
   <!-- SLIDE START HERE -->
-  <div class="drop"><img src="ossweb-img/image/icon-drop.png" alt=""></div>
+  <div class="drop white"></div>
   <div class="swiper-container wrapper" id="content">
     <div class="swiper-wrapper">
       <div class="swiper-slide nav slide-1">
-        <div class="logo"><img src="ossweb-img/image/logo-2.png" alt=""></div>
-        <img src="ossweb-img/image/console-boat.png" alt="" class="console-boat">
-        <img src="ossweb-img/image/headset.png" alt="" class="headset">
-        <img src="ossweb-img/image/riflemen.png" alt="" class="riflemen">
-        <img src="ossweb-img/image/plane.png" alt="" class="plane">
-        <img src="ossweb-img/image/plane2.png" alt="" class="plane2">
-        <img src="ossweb-img/image/bg-index.png" alt="" class="bg-index">
+        <div class="logo"><img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/logo-2.png" alt=""></div>
+        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/console-boat.png" alt="" class="console-boat">
+        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/headset.png" alt="" class="headset">
+        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/riflemen.png" alt="" class="riflemen">
+        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/plane.png" alt="" class="plane">
+        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/plane2.png" alt="" class="plane2">
+        <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/bg-index.png" alt="" class="bg-index">
       </div>
       <div class="swiper-slide slide-2">
         <div class="center">
           <div class="letter">
             <div class="envelope">
-              <img src="ossweb-img/image/envelope.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/envelope.png" alt="">
             </div>
             <div class="letter-paper info">
               <p class="title">腾讯游戏offer等你来拿</p>
@@ -121,7 +126,7 @@
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/bg-2.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/bg-2.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-3">
@@ -129,9 +134,7 @@
           <div class="info">
             <p class="title">游戏大咖全程伴左右</p>
             <div class="content">
-              <p>豪华阵容导师团，全程一对一指导
-                <br> 工作坊邀请资深游戏制作人、游戏研发专家进行面对面作品辅导
-                <br> 更有天美、光子、魔方、北极光工作室GM参与决赛评审</p>
+              <p>豪华阵容导师团，全程一对一指导，工作坊邀请资深游戏制作人、游戏研发专家进行面对面作品辅导，更有天美、光子、魔方、北极光工作室GM参与决赛评审。</p>
             </div>
           </div>
           <div class="mentor">
@@ -144,7 +147,7 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/walker.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/walker.jpg" alt="">
             </div>
             <div class="mentor-2 mentor-inner">
               <div class="person">
@@ -155,7 +158,7 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/lishen.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/lishen.jpg" alt="">
             </div>
             <div class="mentor-3 checked mentor-inner">
               <div class="person">
@@ -166,20 +169,9 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/sammi.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/sammi.jpg" alt="">
             </div>
             <div class="mentor-4 mentor-inner">
-              <div class="person">
-                <div class="person-inner">
-                  <div>
-                    <div class="name">张晗劲</div>
-                    <div class="intor">魔方工作室群总裁</div>
-                  </div>
-                </div>
-              </div>
-              <img src="ossweb-img/image/hanjin.jpg" alt="">
-            </div>
-            <div class="mentor-5 mentor-inner">
               <div class="person">
                 <div class="person-inner">
                   <div>
@@ -188,12 +180,23 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/jim.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/jim.jpg" alt="">
+            </div>
+            <div class="mentor-5 mentor-inner">
+              <div class="person">
+                <div class="person-inner">
+                  <div>
+                    <div class="name">张晗劲</div>
+                    <div class="intor">魔方工作室群总裁</div>
+                  </div>
+                </div>
+              </div>
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/hanjin.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/bg-3.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/bg-3.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-4">
@@ -204,29 +207,29 @@
           <div class="process">
             <div class="process-item item-1">
               <p>制作过程全真感受</p>
-              <img src="ossweb-img/image/icon-1.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/icon-1.png" alt="">
             </div>
             <div class="process-item item-2">
               <p>游戏策划
                 <br>专业指导资料</p>
-              <img src="ossweb-img/image/icon-2.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/icon-2.png" alt="">
             </div>
             <div class="process-item item-3">
               <p>前沿创新实验室
                 <br>
-                <span>Next（New Experience and Technology）</span>
+                <span><b style="font-weight:normal; font-size: 0.12rem;">Next</b>（New Experience and Technology）</span>
                 <br> 研发中心支持创意孵化
               </p>
-              <img src="ossweb-img/image/icon-3.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/icon-3.png" alt="">
             </div>
             <div class="process-item item-4">
               <p>2017全新战略项目 “极光计划”
                 <br> 扶持作品制作上线</p>
-              <img src="ossweb-img/image/icon-4.png" alt=""></div>
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/icon-4.png" alt=""></div>
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/bg-4.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/bg-4.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-5">
@@ -236,15 +239,15 @@
             <p class="title">重磅奖励惊喜多多</p>
           </div>
           <div class="center-element">
-            <img class="element item-1" src="ossweb-img/image/element-1.png" alt="">
-            <img class="element item-2" src="ossweb-img/image/element-2.png" alt="">
-            <img class="element item-3" src="ossweb-img/image/element-3.png" alt="">
-            <img class="element item-4" src="ossweb-img/image/element-4.png" alt="">
-            <img class="element item-5" src="ossweb-img/image/element-5.png" alt="">
+            <img class="element item-1" src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/element-3.png" alt="">
+            <img class="element item-2" src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/element-2.png" alt="">
+            <img class="element item-3" src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/element-5.png" alt="">
+            <img class="element item-4" src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/element-4.png" alt="">
+            <img class="element item-5" src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/element-1.png" alt="">
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/bg-5.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/bg-5.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-6">
@@ -282,13 +285,13 @@
       </div>
     </div>
   </div>
-  <img src="ossweb-img/image/planet.png" alt="" class="planet">
-  <img src="ossweb-img/image/robot.png" alt="" class="robot">
+  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/planet.png" alt="" class="planet">
+  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/robot.png" alt="" class="robot">
   <canvas id="canvas"></canvas>
   <div class="bg"></div>
   <script type="text/javascript" src="//cdnjs.gtimg.com/cdnjs/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="ossweb-img/js/swiper.min.js"></script>
-  <script type="text/javascript" src="ossweb-img/js/common.js"></script>
+  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170601nextidea/js/swiper.min.js"></script>
+  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170601nextidea/js/common.js"></script>
   <script type="text/javascript">
   $(function() {
     app.init();
