--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="utf-8">
@@ -11,26 +11,42 @@
   <title>专题主题（标题）- 产品中文全称官方网站 - 腾讯游戏</title>
   <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170522nextidea/css/swiper.min.css">
   <style>
-  .mask {
+  .ie-fix {
+    display: block;
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 999;
+    top: 0;
+    left: 0;
+    z-index: 99999999999998;
+  }
+  
+  .mask {
+    width: 100%;
+    height: 42px;
+    line-height: 42px;
+    position: fixed;
+    /*top: 42px;*/
+    top: 0;
+    left: 0;
+    z-index: 99999999999999;
     background-color: #333;
   }
   
   .mask .inner {
     position: absolute;
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     color: #fff;
-    left: 50%;
-    top: 50%;
-    margin-top: -150px;
-    margin-left: -200px;
+    left: 0;
+    top: 0;
     text-align: center;
-    line-height: 38px;
-    font-size: 24px;
+    font-size: 16px;
+  }
+  
+  .mask .inner a {
+    color: #f13c35;
+    text-decoration: none;
   }
   
   .uncenter {
@@ -42,70 +58,90 @@
 </head>
 
 <body>
-  <div class="mask" style="display:none;">
+  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170522nextidea/kv.jpg" alt="" class="ie-fix">
+  <div class="mask">
     <div class="inner">
-      由于IE9以下不支持本页面部分功能
-      <br> 请尝试更新浏览器后浏览！
+      您当前浏览器不支持本页面功能，请升级您的浏览器，或使用<a href="http://www.google.cn/chrome/">Google Chrome</a>, <a href="http://www.firefox.com.cn/download/">Firefox</a>等高级浏览器，将会得到更好的体验！
     </div>
   </div>
   <div id="app-box" :userStatus="userStatus"></div>
   <!-- built files will be auto injected -->
-  <script type="text/javascript" src="//cdnjs.gtimg.com/cdnjs/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="//ossweb-img.qq.com/images/js/jquery/jquery-1.9.1.min.js"></script>
   <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170522nextidea/js/swiper.min.js"></script>
-  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170522nextidea/js/config.js"></script>
-  <script src="//ossweb-img.qq.com/images/js/title.js"></script>
+  <!-- <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170522nextidea/js/config.js"></script> -->
+  <script type="text/javascript" src="js/config.js"></script>
+  <!-- <script src="//ossweb-img.qq.com/images/js/title.js"></script> -->
   <script src="//ossweb-img.qq.com/images/js/PTT/ping_tcss_tgideas_https_min.js"></script>
   <script src="//qzs.qq.com/tencentvideo_v1/js/tvp/tvp.player.js" charset="utf-8"></script>
   <script src="//ossweb-img.qq.com/images/js/milo/milo.js"></script>
+  <script src="js/tx.js"></script>
   <script>
   var userStatus = true;
   var userName = null;
-  var userQQ = null;
+  var userQQ;
   milo.ready(function() {
     need("biz.login-min", function(LoginManager) {
       LoginManager.checkLogin(function() {
-        console.log('checkLogin');
-
-        // 如果页面内有这个id则插入值，没有则抛异常
-        try {
-          g("login_qq_span").value = LoginManager.getUserUin();
-        } catch (err) {
-          console.log(err);
-        }
-        userQQ = LoginManager.getUserUin(); //获取QQ号
-        console.log(userQQ);
+        g("login_qq_span").innerHTML = LoginManager.getUserUin(); //获取QQ号
         LoginManager.getNickName(function(loginInfo) {
           if (loginInfo.isLogin) {
-            userStatus = true;
             g("login_nickname_span").innerHTML = loginInfo.nickName;
-            userName = loginInfo.nickName;
-          } else {
-            userStatus = false;
           }
           key = 1;
         });
+      }, function() {
+        LoginManager.login();
       });
     });
   });
+  milo.ready(function() {
+    need("biz.login-min", function(LoginManager) {
+        LoginManager.checkLogin(function() {
+          console.log('checkLogin');
+          // 如果页面内有这个id则插入值，没有则抛异常
+          try {
+            g("login_qq_span").value = LoginManager.getUserUin();
+          } catch (err) {
+            console.log(err);
+          }
+          userQQ = LoginManager.getUserUin(); //获取QQ号
+          console.log(userQQ);
+          LoginManager.getNickName(function(loginInfo) {
+            if (loginInfo.isLogin) {
+              userStatus = true;
+              g("login_nickname_span").innerHTML = loginInfo.nickName;
+              userName = loginInfo.nickName;
+            } else {
+              userStatus = false;
+            }
+            key = 1;
+          });
+        }, function() {
+          LoginManager.login();
+        });
+    });
+  });
 
+  // 判断IE
   var isIE = function(ver) {
     var b = document.createElement('b')
     b.innerHTML = '<!--[if IE ' + ver + ']><i></i><![endif]-->'
     return b.getElementsByTagName('i').length === 1
   }
-  if (isIE(6)) {
-    // IE 6
-  }
-  // ...
-  if (isIE(9)) {
-    // IE 9
-  }
+
   var ie = isIE()
-  if (isIE(6) || isIE(7) || isIE(8)) {
+  if (isIE(6) || isIE(7) || isIE(8) || isIE(9)) {
     $('.mask').show();
   } else {
     $('.mask').hide();
   }
+
+  if (isIE(6) || isIE(7) || isIE(8)) {
+    $('.ie-fix').show();
+  } else {
+    $('.ie-fix').hide();
+  }
+
   //此段代码不能放到外链JS中，
   var setSite = { //设置网站属性
     siteType: "os" || "a20160711xxx", //必填项:"os"代表是官网，如果不是，则填写actName例如a20160701xxx
