--- a/index.htm
+++ b/index.htm
@@ -9,66 +9,116 @@
   <meta name="Description" content="">
   <meta name="Keywords" content="腾讯游戏">
   <title>专题主题（标题）- 产品中文全称官方网站 - 腾讯游戏</title>
-  <link rel="stylesheet" type="text/css" href="./ossweb-img/css/idangerous.swiper.css">
-  <!-- <link rel="stylesheet" href="ossweb-img/css/swiper.min.css"> -->
-  <link rel="stylesheet" type="text/css" href="ossweb-img/css/common.css">
+  <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/idangerous.swiper.css">
+  <!-- <link rel="stylesheet" type="text/css" href="//gameinstitute.qq.com/act/a20170526guide/css/common.css"> -->
+  <link rel="stylesheet" href="ossweb-img/css/common.css">
+  <style>
+  .ie-fix {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999999999998;
+  }
+  
+  .mask {
+    width: 100%;
+    height: 42px;
+    line-height: 42px;
+    position: fixed;
+    /*top: 42px;*/
+    top: 0;
+    left: 0;
+    z-index: 99999999999999;
+    background-color: #333;
+  }
+  
+  .mask .inner {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    left: 0;
+    top: 0;
+    text-align: center;
+    font-size: 16px;
+  }
+  
+  .mask .inner a {
+    color: #f13c35;
+    text-decoration: none;
+  }
+  
+  .uncenter {
+    text-align: left;
+    padding-left: 25px;
+  }
+  </style>
 </head>
 
 <body>
+  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170522nextidea/kv.jpg" alt="" class="ie-fix" style="display: none;">
+  <div class="mask" style="display:none">
+    <div class="inner">
+      您当前浏览器不支持本页面功能，请升级您的浏览器，或使用<a href="http://www.google.cn/chrome/">Google Chrome</a>, <a href="http://www.firefox.com.cn/download/">Firefox</a>等高级浏览器，将会得到更好的体验！
+    </div>
+  </div>
   <!-- SLIDE START HERE -->
   <div class="swiper-container wrapper" id="content">
     <div class="swiper-wrapper">
       <div class="swiper-slide nav slide-1">
         <div class="slide">
-          <img src="./ossweb-img/image/slide-icon.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon.png" alt="">
         </div>
         <div class="center">
-          <div class="logo"><img src="ossweb-img/image/LOGO.png" alt=""></div>
-          <a class="go-index" href="http://project.hivan.me/" alt="">进入官网</a>
-          <img src="ossweb-img/image/console-boat.png" alt="" class="console-boat">
-          <img src="ossweb-img/image/headset.png" alt="" class="headset">
-          <img src="ossweb-img/image/riflemen.png" alt="" class="riflemen">
-          <img src="ossweb-img/image/robot-2.png" alt="" class="robot-2">
-          <img src="ossweb-img/image/tablets.png" alt="" class="tablets">
-          <img src="ossweb-img/image/keyboard.png" alt="" class="keyboard">
-          <img src="ossweb-img/image/plane.png" alt="" class="plane">
-          <img src="ossweb-img/image/bg-nav.png" alt="" class="bg-nav">
+          <div class="logo"><img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/logo.png" alt=""></div>
+          <a class="go-index" href="http://gameinstitute.qq.com/a20170529yxds/index.shtml#/home" alt="">进入官网</a>
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/console-boat.png" alt="" class="console-boat">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/headset.png" alt="" class="headset">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/riflemen.png" alt="" class="riflemen">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/robot-2.png" alt="" class="robot-2">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/tablets.png" alt="" class="tablets">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/keyboard.png" alt="" class="keyboard">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/plane.png" alt="" class="plane">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/bg-nav.png" alt="" class="bg-nav">
         </div>
       </div>
       <div class="swiper-slide slide-2">
         <div class="slide">
-          <img src="./ossweb-img/image/slide-icon.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon.png" alt="">
         </div>
         <div class="center">
           <div class="letter">
             <div class="envelope">
-              <img src="ossweb-img/image/envelope.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/envelope.png" alt="">
             </div>
             <div class="letter-paper info">
               <p class="title">腾讯游戏offer等你来拿</p>
-              <p>HR、校招面试官直接参与评审
-                <br> 赛事直达GM面，更有校招补录机会
-                <br> offer发放，一触即达</p>
+              <div class="content">
+                <p>HR、校招面试官直接参与评审
+                  <br> 赛事直达GM面，更有校招补录机会
+                  <br> offer发放，一触即达</p>
+              </div>
             </div>
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/slide-2-bg.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-2-bg.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-3">
         <div class="slide">
-          <img src="./ossweb-img/image/slide-icon-dark.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon-dark.png" alt="">
         </div>
         <div class="center">
           <div class="info">
             <p class="title">游戏大咖全程伴左右</p>
-            <p>豪华阵容导师团，全程一对一指导
-              <br> 工作坊邀请资深游戏制作人、游戏研发专家进行面对面作品辅导
-              <br> 更有天美、光子、魔方、北极光工作室GM参与决赛评审</p>
+            <div class="content">豪华阵容导师团，全程一对一指导，工作坊邀请资深游戏制作人、游戏研发专家进行面对面作品辅导，更有天美、光子、魔方、北极光工作室GM参与决赛评审。</div>
           </div>
           <div class="mentor">
-            <div class="mentor-1">
+            <div class="mentor-1 mentor-inner">
               <div class="person">
                 <div class="person-inner">
                   <div>
@@ -77,9 +127,9 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/walker.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/walker.jpg" alt="">
             </div>
-            <div class="mentor-2">
+            <div class="mentor-2 mentor-inner">
               <div class="person">
                 <div class="person-inner">
                   <div>
@@ -88,9 +138,9 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/lishen.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/lishen.jpg" alt="">
             </div>
-            <div class="mentor-3">
+            <div class="mentor-3 mentor-inner">
               <div class="person">
                 <div class="person-inner">
                   <div>
@@ -99,9 +149,9 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/sammi.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/sammi.jpg" alt="">
             </div>
-            <div class="mentor-4">
+            <div class="mentor-4 mentor-inner">
               <div class="person">
                 <div class="person-inner">
                   <div>
@@ -110,9 +160,9 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/jim.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/jim.jpg" alt="">
             </div>
-            <div class="mentor-5">
+            <div class="mentor-5 mentor-inner">
               <div class="person">
                 <div class="person-inner">
                   <div>
@@ -121,84 +171,84 @@
                   </div>
                 </div>
               </div>
-              <img src="ossweb-img/image/hanjin.jpg" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/hanjin.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/slide-3-bg.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-3-bg.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-4">
         <div class="slide">
-          <img src="./ossweb-img/image/slide-icon.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon.png" alt="">
         </div>
         <div class="center">
           <div class="info">
             <p class="title">真实游戏制作全过程</p>
           </div>
           <div class="line">
-            <img src="ossweb-img/image/line.png" alt="">
+            <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/line.png" alt="">
           </div>
           <div class="process">
             <div class="process-item item-1">
               <p>制作过程全真感受</p>
-              <img src="ossweb-img/image/icon-1.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-1.png" alt="">
             </div>
             <div class="process-item item-2">
               <p>游戏策划专业指导资料</p>
-              <img src="ossweb-img/image/icon-2.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-2.png" alt="">
             </div>
             <div class="process-item item-3">
               <p>前沿创新实验室
                 <br> Next <span>（New Experience and Technology）</span>
                 <br> 研发中心支持创意孵化 </p>
-              <img src="ossweb-img/image/icon-3.png" alt="">
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-3.png" alt="">
             </div>
             <div class="process-item item-4">
               <p>2017全新战略项目
                 <br> “极光计划”
                 <br> 扶持作品制作上线</p>
-              <img src="ossweb-img/image/icon-4.png" alt=""></div>
+              <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/icon-4.png" alt=""></div>
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/slide-4-bg.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-4-bg.png" alt="">
         </div>
       </div>
       <div class="swiper-slide slide-5">
         <div class="slide">
-          <img src="./ossweb-img/image/slide-icon-dark.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-icon-dark.png" alt="">
         </div>
         <div class="center">
-          <a class="go-index" href="http://project.hivan.me/" alt="">进入官网</a>
+          <a class="go-index" href="http://gameinstitute.qq.com/a20170529yxds/index.shtml#/home" alt="">进入官网</a>
           <div class="info">
             <p class="title">重磅奖励惊喜多多</p>
           </div>
           <div class="center-element">
-            <img class="left element" src="ossweb-img/image/element-left.png" alt="">
-            <img class="element item-1" src="ossweb-img/image/element-1.png" alt="">
-            <img class="element item-2" src="ossweb-img/image/element-2.png" alt="">
-            <img class="element item-3" src="ossweb-img/image/element-3.png" alt="">
-            <img class="element item-4" src="ossweb-img/image/element-4.png" alt="">
-            <img class="element item-5" src="ossweb-img/image/element-5.png" alt="">
-            <img class="right element" src="ossweb-img/image/element-right.png" alt="">
+            <img class="left element" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-left.png" alt="">
+            <img class="element item-1" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-1.png" alt="">
+            <img class="element item-2" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-2.png" alt="">
+            <img class="element item-3" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-3.png" alt="">
+            <img class="element item-4" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-4.png" alt="">
+            <img class="element item-5" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-5.png" alt="">
+            <img class="right element" src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/element-right.png" alt="">
           </div>
         </div>
         <div class="bg">
-          <img src="ossweb-img/image/slide-5-bg.png" alt="">
+          <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/slide-5-bg.png" alt="">
         </div>
       </div>
     </div>
   </div>
-  <img src="ossweb-img/image/planet.png" alt="" class="planet">
-  <img src="ossweb-img/image/robot.png" alt="" class="robot">
+  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/planet.png" alt="" class="planet">
+  <img src="//game.gtimg.cn/images/gameinstitute/act/a20170526guide/robot.png" alt="" class="robot">
   <canvas id="canvas"></canvas>
   <div class="bg"></div>
   <script type="text/javascript" src="//cdnjs.gtimg.com/cdnjs/libs/jquery/2.1.1/jquery.min.js"></script>
-  <!-- <script type="text/javascript" src="ossweb-img/js/swiper.min.js"></script> -->
-  <script type="text/javascript" src="./ossweb-img/js/idangerous.swiper.min.js"></script>
+  <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/idangerous.swiper.min.js"></script>
   <script src="//ossweb-img.qq.com/images/js/title.js"></script>
+  <!-- <script type="text/javascript" src="//gameinstitute.qq.com/act/a20170526guide/js/common.js"></script> -->
   <script type="text/javascript" src="ossweb-img/js/common.js"></script>
   <script src="//ossweb-img.qq.com/images/js/PTT/ping_tcss_tgideas_https_min.js"></script>
   <script src="//qzs.qq.com/tencentvideo_v1/js/tvp/tvp.player.js" charset="utf-8"></script>
@@ -209,23 +259,24 @@
   })
   </script>
   <script>
+  // 判断IE
   var isIE = function(ver) {
     var b = document.createElement('b')
     b.innerHTML = '<!--[if IE ' + ver + ']><i></i><![endif]-->'
     return b.getElementsByTagName('i').length === 1
   }
-  if (isIE(6)) {
-    // IE 6
-  }
-  // ...
-  if (isIE(9)) {
-    // IE 9
-  }
+
   var ie = isIE()
-  if (isIE(6) || isIE(7) || isIE(8)) {
+  if (isIE(6) || isIE(7) || isIE(8) || isIE(9)) {
     $('.mask').show();
   } else {
     $('.mask').hide();
+  }
+
+  if (isIE(6) || isIE(7) || isIE(8)) {
+    $('.ie-fix').show();
+  } else {
+    $('.ie-fix').hide();
   }
 
   // //此段代码不能放到外链JS中，
